# ytlang

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
examples/Sqc3go6rmjM/: handout.html  lesson.json  quiz.html  raw.json  recording.html  transcript.html
examples/kJ5PCbtiCpk/: handout.html  lesson.json  quiz.html  raw.json  recording.html  transcript.html
ytlang/: architecture.md  config.py  languages.py  models.py
ytlang/cli/: main.py
ytlang/pipeline/: analyze.py  fetch.py  preclean.py  translate.py  utils.py
ytlang/prompts/: __init__.py
ytlang/prompts/de/: analyze_system.txt  analyze_user.txt  preclean.txt
ytlang/prompts/en/: analyze_system.txt  analyze_user.txt  preclean.txt
ytlang/prompts/es/: analyze_system.txt  analyze_user.txt  preclean.txt
ytlang/prompts/fr/: analyze_system.txt  analyze_user.txt  preclean.txt
ytlang/prompts/ja/: analyze_system.txt  analyze_user.txt  preclean.txt
ytlang/prompts/ko/: analyze_system.txt  analyze_user.txt  preclean.txt
ytlang/prompts/shared/: translate.txt
ytlang/prompts/zh/: analyze_system.txt  analyze_user.txt  preclean.txt
ytlang/render/: fragments.py  render.py
ytlang/render/templates/: handout.html  quiz.html  recording.html  transcript.html
ytlang/render/templates/_partials/: back_btn.html  back_btn_css.html  fmt_seconds.js  level_colors.js
